# game-of-life

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Makefile  README.md  game_of_life.txt
.github/workflows/: ci.yml
src/: game_of_life.cpp  game_of_life.h  main.cpp
tests/: game_of_life_test.cpp
